--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,28 @@
-LOG_LEVEL=debug
-OPENAI_API_KEY=<key>
-ANTHROPIC_API_KEY=<key>
+LOG_LEVEL="debug"
+OPENAI_API_KEY="<key>"
+ANTHROPIC_API_KEY="<key>"
 LOG_TO_FILES=true
 LLM_RATE_LIMIT_TOKENS_PER_DAY=1000000
+PERSISTENCE_PROVIDER="json"
+PERSISTENCE_JSON_PATH="./.toadstool/sessions.json"
+REDUS_URL=
+DATABASE_URL="sqlite:///~/.toadstool/toadstool.db"
+# Path to SQLite DB file | `~/.toadstool/toadstool.db` | No |
+TOADSTOOL_PERSISTENCE_SQLITE_PATH="~/.toadstool/toadstool.db"
+# SQLite write mode (`per_message` / `per_token` / `on_session_change`) | `per_message` | No |
+TOADSTOOL_PERSISTENCE_SQLITE_WRITE_MODE="per_message"
+#  Batch delay (ms) for SQLite writes | `300` | No |
+TOADSTOOL_PERSISTENCE_SQLITE_BATCH_DELAY=300
+# Optional subdirectory for file operations (relative to current working directory) | _none_ | No |
+# When set, files will be written to ./<subdir>/<file> instead of ./<file>
+# Example: TOADSTOOL_WORK_SUBDIR=workspace
+TOADSTOOL_WORK_SUBDIR=
+
+
+| `TOADSTOOL_PERSISTENCE_JSON_PATH` | Path to JSON session store | `~/.toadstool/sessions.json` | No |
+| `TOADSTOOL_PERSISTENCE_SQLITE_PATH` | Path to SQLite DB file | `~/.toadstool/toadstool.db` | No |
+| `TOADSTOOL_PERSISTENCE_SQLITE_WRITE_MODE` | SQLite write mode (`per_message` / `per_token` / `on_session_change`) | `per_message` | No |
+| `TOADSTOOL_PERSISTENCE_SQLITE_BATCH_DELAY` | Batch delay (ms) for SQLite writes | `300` | No |
+| `TOADSTOOL_WORK_SUBDIR` | Optional subdirectory for file operations (relative to current working directory) | _none_ | No |
+| `DATABASE_URL` | SQLite database URL (for example, `sqlite:///~/.toadstool/toadstool.db`) | `sqlite:///~/.toadstool/toadstool.db` | No |
+| `REDIS_URL` | Redis connection string (optional cache layer) | _none_ | No |
