--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "toad-ts",
+  "name": "toadstool-ts",
   "version": "1.0.0",
   "description": "A unified terminal interface for AI coding agents",
   "type": "module",
   "bin": {
-    "toad": "./dist/cli.js"
+    "toadstool": "./dist/cli.js"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -26,6 +26,8 @@
     "test:unit": "vitest run --config vitest.unit.config.ts",
     "test:e2e": "vitest run --config vitest.e2e.config.ts",
     "test:coverage": "vitest run --coverage",
+    "check:literals": "tsx scripts/check-magic-literals.ts",
+    "check:literals:strict": "tsx scripts/check-magic-literals.ts --strict",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
@@ -37,59 +39,65 @@
     "persistence:import": "tsx scripts/persistence/import.ts"
   },
   "dependencies": {
-    "ink": "^5.0.1",
-    "@inkjs/ui": "^2.0.0",
-    "react": "^18.3.1",
     "@agentclientprotocol/sdk": "^0.12.0",
     "@ast-grep/napi": "^0.40.5",
+    "@inkjs/ui": "^2.0.0",
     "@vscode/ripgrep": "^1.17.0",
-    "commander": "^12.1.0",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.4",
     "chalk": "^5.3.0",
+    "chokidar": "^3.6.0",
+    "commander": "^12.1.0",
+    "conf": "^13.0.1",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "eventemitter3": "^5.0.1",
+    "execa": "^9.3.1",
+    "fast-glob": "^3.3.3",
+    "fast-xml-parser": "^4.3.5",
+    "fdir": "^6.5.0",
     "figures": "^6.1.0",
+    "find-up": "^7.0.0",
+    "fs-extra": "^11.2.0",
+    "fuzzysort": "^3.1.0",
+    "ink": "^5.0.1",
+    "ink-picture": "^1.3.3",
+    "ink-tab": "^5.2.0",
+    "js-yaml": "^4.1.0",
+    "keytar": "^7.9.0",
     "log-symbols": "^6.0.0",
     "marked": "^14.1.0",
     "marked-terminal": "^7.1.0",
-    "shiki": "^1.14.1",
-    "execa": "^9.3.1",
-    "tree-kill": "^1.2.2",
-    "fs-extra": "^11.2.0",
-    "chokidar": "^3.6.0",
-    "fdir": "^6.5.0",
-    "fast-glob": "^3.3.3",
-    "find-up": "^7.0.0",
-    "fuzzysort": "^3.1.0",
-    "tinyglobby": "^0.2.15",
-    "wrap-ansi": "^9.0.0",
-    "slice-ansi": "^7.1.0",
-    "strip-ansi": "^7.1.0",
     "nanoid": "^5.0.7",
-    "date-fns": "^3.6.0",
-    "conf": "^13.0.1",
     "p-queue": "^8.0.1",
-    "eventemitter3": "^5.0.1",
-    "dotenv": "^16.4.5",
     "papaparse": "^5.4.1",
-    "fast-xml-parser": "^4.3.5",
-    "js-yaml": "^4.1.0",
-    "keytar": "^7.9.0"
+    "react": "^18.0.0",
+    "sequelize": "^6.37.0",
+    "shiki": "^1.14.1",
+    "slice-ansi": "^7.1.0",
+    "sqlite3": "^5.1.6",
+    "strip-ansi": "^7.1.0",
+    "tinyglobby": "^0.2.15",
+    "tree-kill": "^1.2.2",
+    "wrap-ansi": "^9.0.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "typescript": "^5.5.4",
-    "@types/react": "^18.3.3",
-    "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.1.0",
     "@biomejs/biome": "^1.9.4",
-    "vitest": "^2.0.5",
+    "@types/fs-extra": "^11.0.4",
+    "@types/js-yaml": "^4.0.9",
+    "@types/marked-terminal": "^6.1.1",
+    "@types/node": "^22.1.0",
+    "@types/papaparse": "^5.3.14",
+    "@types/react": "^18.3.3",
+    "@types/sqlite3": "^3.1.11",
     "@vitest/coverage-v8": "^2.0.5",
     "@vitest/ui": "^2.0.5",
     "ink-testing-library": "^4.0.0",
-    "tsx": "^4.17.0",
-    "tsup": "^8.2.4",
     "node-html-parser": "^6.1.13",
-    "@types/papaparse": "^5.3.14",
-    "@types/js-yaml": "^4.0.9"
+    "tsup": "^8.2.4",
+    "tsx": "^4.17.0",
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   },
   "peerDependencies": {
     "react": "^18.0.0"
@@ -99,7 +107,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/your-org/toad-ts.git"
+    "url": "git+https://github.com/your-org/toadstool-ts.git"
   },
   "keywords": ["tui", "terminal", "ai", "coding-agent", "claude", "acp", "cli"],
   "author": "Jonathan Boice",
