--- a/.env.sample
+++ b/.env.sample
@@ -26,3 +26,4 @@ TOADSTOOL_WORK_SUBDIR=
 | `TOADSTOOL_WORK_SUBDIR` | Optional subdirectory for file operations (relative to current working directory) | _none_ | No |
 | `DATABASE_URL` | SQLite database URL (for example, `sqlite:///~/.toadstool/toadstool.db`) | `sqlite:///~/.toadstool/toadstool.db` | No |
 | `REDIS_URL` | Redis connection string (optional cache layer) | _none_ | No |
+TOADSTOOL_WORK_SUBDIR="./.toadstool/"
