--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "tree-kill": "^1.2.2",
     "wrap-ansi": "^9.0.0",
     "zod": "^3.23.8",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "ignore": "^5.3.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
