toad-ts:feat(config): add project folder path render format env variable

--- a/.env.sample
+++ b/.env.sample
@@ -27,3 +27,5 @@ TOADSTOOL_WORK_SUBDIR=
 | `DATABASE_URL` | SQLite database URL (for example, `sqlite:///~/.toadstool/toadstool.db`) | `sqlite:///~/.toadstool/toadstool.db` | No |
 | `REDIS_URL` | Redis connection string (optional cache layer) | _none_ | No |
 TOADSTOOL_WORK_SUBDIR="./.toadstool/"
+# short | full
+TOADSTOOL_UI_PROJECT_FOLDER_PATH_RENDER="short"
